templates/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"wordpress-mysql"},"name":"wordpress-mysql","namespace":"default"},"spec":{"clusterIP":"None","ports":[{"port":3306}],"selector":{"app":"wordpress-mysql"}}}
  creationTimestamp: "2026-02-10T17:51:55Z"
  labels:
    app: wordpress-mysql
  name: wordpress-mysql
  namespace: default
  resourceVersion: "5001"
  uid: 270f71c7-3d09-4570-8070-f13ba1eb2587
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: wordpress-mysql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
