templates/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"wordpress-service","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"wordpress"}}}
  creationTimestamp: "2026-02-10T17:36:14Z"
  name: wordpress-service
  namespace: default
  resourceVersion: "3699"
  uid: 4a5c3d83-6e19-4e0e-9ff4-74f33c87a10a
spec:
  clusterIP: 10.96.170.111
  clusterIPs:
  - 10.96.170.111
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
